[INJICERT-1193] Resolve review comments
Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>