@@ -11,8 +11,12 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
+import java.time.Instant;
+import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -56,7 +60,10 @@ public class CredentialLedgerServiceImpl implements CredentialLedgerService {
         response.setCredentialType(record.getCredentialType());
         List<CredentialStatusDetail> statusDetails = record.getCredentialStatusDetails();
         if (statusDetails != null && !statusDetails.isEmpty()) {
-            CredentialStatusDetail latestStatus = statusDetails.get(0);
+            CredentialStatusDetail latestStatus = statusDetails.stream()
+                                       .filter(s -> s.getCreatedTimes() != null)
+                                        .max(Comparator.comparingLong(CredentialStatusDetail::getCreatedTimes))
+                                       .orElse(statusDetails.getFirst());
 
             String statusListCredentialId = latestStatus.getStatusListCredentialId();
             Long statusListIndex = latestStatus.getStatusListIndex();
@@ -66,12 +73,12 @@ public class CredentialLedgerServiceImpl implements CredentialLedgerService {
             response.setStatusListCredentialUrl(statusListCredentialId);
             response.setStatusListIndex(statusListIndex);
             response.setStatusPurpose(statusPurpose);
-            long timestampMillis = createdDtimes;
-            OffsetDateTime createdDateTime = OffsetDateTime.ofInstant(
-                    java.time.Instant.ofEpochMilli(timestampMillis),
-                    java.time.ZoneOffset.UTC
-            );
-            response.setStatusTimestamp(createdDateTime.toLocalDateTime());
+            if (createdDtimes != null) {
+                LocalDateTime ts = LocalDateTime.ofInstant(
+                        Instant.ofEpochMilli(createdDtimes),
+                        ZoneOffset.UTC);
+                response.setStatusTimestamp(ts);
+            }
         }
         return response;
     }
@@ -102,7 +109,7 @@ public class CredentialLedgerServiceImpl implements CredentialLedgerService {
             return records.stream()
                     .map(record -> {
                         CredentialStatusResponse response = mapToSearchResponse(record);
-                        response.setIssueDate(null); // Set issuanceDate as null
+                        response.setIssueDate(null); // Set issueDate as null
                         return response;
                     })
                     .collect(Collectors.toList());
